--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     implementation 'com.google.android.gms:play-services-location:21.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -82,6 +83,9 @@ dependencies {
 
     // Circle Image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // Dexter
+    implementation 'com.karumi:dexter:6.2.3'
 
     // Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
